--- a/_sass/mobile.sass
+++ b/_sass/mobile.sass
@@ -142,6 +142,7 @@ section.post-grid
   div.row
     display: flex
     flex-direction: row
+    flex-wrap: wrap
 
     article.tile:nth-child(odd)
       background-color: #dfdfdf
@@ -160,7 +161,7 @@ section.post-grid
         text-decoration: none
 
     article.tile
-      width: 50vw
+      width: 50%
       height: calc(100vh/3)
       position: relative
       transition: 0.5s
@@ -209,11 +210,11 @@ section.post-grid
           color: #f6f6f6
 
     article.tile.wide
-      width: 100vw
+      width: 100%
       height: calc(100vh/3)
 
     article.tile.testimonials
-      width: 100vw
+      width: 100%
       background-color: $salmon
       padding: 20px
 
